--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;  
+            /*background-color: black;  
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
-            background-size: cover;     
+            background-size: cover;    
+            background-attachment: fixed;*/
+
+            /* Shorthand - Background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center fixed;
+            background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -34,6 +42,8 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum placeat nostrum nesciunt laudantium delectus, reprehenderit dolores quas molestias? Saepe recusandae quod ex soluta? Cum harum similique, perspiciatis aspernatur velit earum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem porro, fugit accusantium numquam a quos? Laudantium iusto officiis placeat unde obcaecati dignissimos temporibus quia. Culpa dolorum labore maxime alias perferendis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nihil, rerum neque quisquam commodi similique illum harum amet, libero veniam eos temporibus dolorem nulla cumque iste, maxime delectus inventore voluptas.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum placeat nostrum nesciunt laudantium delectus, reprehenderit dolores quas molestias? Saepe recusandae quod ex soluta? Cum harum similique, perspiciatis aspernatur velit earum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem porro, fugit accusantium numquam a quos? Laudantium iusto officiis placeat unde obcaecati dignissimos temporibus quia. Culpa dolorum labore maxime alias perferendis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nihil, rerum neque quisquam commodi similique illum harum amet, libero veniam eos temporibus dolorem nulla cumque iste, maxime delectus inventore voluptas.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum placeat nostrum nesciunt laudantium delectus, reprehenderit dolores quas molestias? Saepe recusandae quod ex soluta? Cum harum similique, perspiciatis aspernatur velit earum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem porro, fugit accusantium numquam a quos? Laudantium iusto officiis placeat unde obcaecati dignissimos temporibus quia. Culpa dolorum labore maxime alias perferendis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nihil, rerum neque quisquam commodi similique illum harum amet, libero veniam eos temporibus dolorem nulla cumque iste, maxime delectus inventore voluptas.
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ab beatae nobis doloremque, deleniti rerum? Architecto quas laborum aperiam ex. Distinctio laborum molestiae dolores magni fugit dicta itaque deleniti perspiciatis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga error optio culpa nam nesciunt corrupti quis doloremque minus ex quibusdam. Iste non saepe nisi maiores, unde odio cumque quidem quod.</p>
         </p>
     </main>
 </body>
