--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -31,6 +31,14 @@
             color: white;
         }
 
+        tbody > tr:nth-child(odd) { /* 'ímpar' / '2n-1' */ 
+            background-color: white;
+        }
+
+        tbody > tr:nth-child(even) { /* 'par' '2n' */
+            background-color: lightgrey;
+        }
+
         td.num {
             text-align: right;
         }
