cabeçalho fixo em tabela

--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         
         caption {
@@ -29,6 +30,12 @@
         thead, tfoot {
             background-color: grey;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: grey;
         }
 
         tbody > tr:nth-child(odd) { /* 'ímpar' / '2n-1' */ 
@@ -181,5 +188,14 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex non quia eaque veritatis dolor incidunt voluptatum. Veritatis, eius itaque et aspernatur veniam illo, dignissimos, exercitationem voluptatum sequi nam magnam fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur deserunt quasi libero unde, animi explicabo sapiente illum, commodi, soluta corrupti. Enim, temporibus necessitatibus quam est fugit minima? Odio, quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sunt est delectus asperiores hic, accusamus quia consequatur fugiat ratione, fugit, eos voluptatibus! Quae nam eveniet tempore odit placeat atque nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore autem amet odit rem! Quo magni tempora officia, ut alias rerum assumenda autem accusamus cumque delectus excepturi temporibus quos hic!</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex non quia eaque veritatis dolor incidunt voluptatum. Veritatis, eius itaque et aspernatur veniam illo, dignissimos, exercitationem voluptatum sequi nam magnam fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur deserunt quasi libero unde, animi explicabo sapiente illum, commodi, soluta corrupti. Enim, temporibus necessitatibus quam est fugit minima? Odio, quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sunt est delectus asperiores hic, accusamus quia consequatur fugiat ratione, fugit, eos voluptatibus! Quae nam eveniet tempore odit placeat atque nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore autem amet odit rem! Quo magni tempora officia, ut alias rerum assumenda autem accusamus cumque delectus excepturi temporibus quos hic!</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex non quia eaque veritatis dolor incidunt voluptatum. Veritatis, eius itaque et aspernatur veniam illo, dignissimos, exercitationem voluptatum sequi nam magnam fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur deserunt quasi libero unde, animi explicabo sapiente illum, commodi, soluta corrupti. Enim, temporibus necessitatibus quam est fugit minima? Odio, quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sunt est delectus asperiores hic, accusamus quia consequatur fugiat ratione, fugit, eos voluptatibus! Quae nam eveniet tempore odit placeat atque nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore autem amet odit rem! Quo magni tempora officia, ut alias rerum assumenda autem accusamus cumque delectus excepturi temporibus quos hic!</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex non quia eaque veritatis dolor incidunt voluptatum. Veritatis, eius itaque et aspernatur veniam illo, dignissimos, exercitationem voluptatum sequi nam magnam fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur deserunt quasi libero unde, animi explicabo sapiente illum, commodi, soluta corrupti. Enim, temporibus necessitatibus quam est fugit minima? Odio, quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sunt est delectus asperiores hic, accusamus quia consequatur fugiat ratione, fugit, eos voluptatibus! Quae nam eveniet tempore odit placeat atque nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore autem amet odit rem! Quo magni tempora officia, ut alias rerum assumenda autem accusamus cumque delectus excepturi temporibus quos hic!</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex non quia eaque veritatis dolor incidunt voluptatum. Veritatis, eius itaque et aspernatur veniam illo, dignissimos, exercitationem voluptatum sequi nam magnam fugiat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur consequuntur deserunt quasi libero unde, animi explicabo sapiente illum, commodi, soluta corrupti. Enim, temporibus necessitatibus quam est fugit minima? Odio, quas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sunt est delectus asperiores hic, accusamus quia consequatur fugiat ratione, fugit, eos voluptatibus! Quae nam eveniet tempore odit placeat atque nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod tempore autem amet odit rem! Quo magni tempora officia, ut alias rerum assumenda autem accusamus cumque delectus excepturi temporibus quos hic!</p>
 </body>
 </html>
