atualizei exercício iframe002

--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod, delectus possimus animi natus enim, suscipit eligendi non nobis blanditiis, sunt deserunt nihil ex sapiente nemo ad quas asperiores eos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore suscipit nesciunt optio, sunt voluptate itaque impedit minima corrupti provident necessitatibus error eligendi. Modi quia itaque corrupti facere nam voluptas esse?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500px" width="500px"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500px" width="500px">
+        <p>Infelizmente seu navegador não é compatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, quos ipsum iusto ea a nobis minus quidem dicta sunt aspernatur. Porro harum voluptas, corporis nisi sapiente pariatur odit exercitationem velit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam et eaque, reprehenderit deleniti, maiores eius magnam sequi minima non ipsa, qui accusantium incidunt totam recusandae id nesciunt impedit. Commodi, pariatur!</p>
 </body>
