--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, magni. Dolor animi expedita voluptatibus corrupti odio, tempore officia error nam eligendi, enim nisi aperiam dolore illum maiores adipisci explicabo! Nemo. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, corporis iste culpa porro, consectetur excepturi facere minima vel ipsam veritatis eaque. Voluptatum ex, numquam illo reiciendis dicta porro ea nulla.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro ullam tempora deleniti! Fugit alias iste veniam vitae omnis, tenetur iusto quaerat quisquam unde illo modi dolorum nam natus vero ducimus? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad consequuntur nobis perferendis et rerum vel quo, nostrum possimus blanditiis enim, nemo quos corporis cumque doloremque, sapiente ex voluptate perspiciatis nihil.</p>">
         <p>Infelizmente seu navegador não é compatível com isso!</p>
     </iframe>
 
